@@ -13,8 +13,10 @@
 
 if (isset ($_GET["mid"]) && preg_match('/^[0-9]+$/',$_GET["mid"])) {
   $pid = $_GET["mid"];
+  if (isset($_GET['engine'])) $engine = $_GET['engine'];
+  else $engine = 'imdb';
 
-  switch($_GET["engine"]) {
+  switch($engine) {
     case "pilot":
         require("pilot_person.class.php");
         $person = new pilot_person($_GET["mid"]);
@@ -100,7 +102,7 @@ if (isset ($_GET["mid"]) && preg_match('/^[0-9]+$/',$_GET["mid"])) {
     echo "<TR><TD><B>Spouse(s):</B></TD><TD>";
     echo "<table align='left' border='1' style='border-collapse:collapse;background-color:#ddd;'><tr><th style='background-color:#07f;'>Spouse</th><th style='background-color:#07f;'>Period</th><th style='background-color:#07f;'>Comment</th></tr>";
     foreach ($sp as $spouse) {
-      echo "<tr><td><a href='?mid=".$spouse["imdb"]."&engine=".$_GET['engine']."'>".$spouse["name"]."</a></td>";
+      echo "<tr><td><a href='?mid=".$spouse["imdb"]."&engine=".$engine."'>".$spouse["name"]."</a></td>";
       if (empty($spouse["from"])) echo "<td>&nbsp;</td>";
       else {
         echo "<td>".$spouse["from"]["day"].".".$spouse["from"]["month"]." ".$spouse["from"]["year"];
@@ -121,8 +123,8 @@ if (isset ($_GET["mid"]) && preg_match('/^[0-9]+$/',$_GET["mid"])) {
   # MiniBio
   $bio = $person->bio();
   if (!empty($bio)) {
-    if ($_GET['engine']=='pilot' || count($bio)<2) $idx = 0; else $idx = 1;
-    echo "<TR><TD><B>Mini Bio:</B></TD><TD>".preg_replace('/http\:\/\/'.str_replace(".","\.",$person->imdbsite).'\/name\/nm(\d{7})\//','?mid=\\1&engine='.$_GET['engine'],$bio[$idx]["desc"])."</TD></TR>\n";
+    if ($engine=='pilot' || count($bio)<2) $idx = 0; else $idx = 1;
+    echo "<TR><TD><B>Mini Bio:</B></TD><TD>".preg_replace('/http\:\/\/'.str_replace(".","\.",$person->imdbsite).'\/name\/nm(\d{7})\//','?mid=\\1&engine='.$engine,$bio[$idx]["desc"])."</TD></TR>\n";
   }
 
   # Some Trivia (Personal Quotes work the same)
@@ -153,7 +155,7 @@ if (isset ($_GET["mid"]) && preg_match('/^[0-9]+$/',$_GET["mid"])) {
     $tc = count($sal);
     for ($i=0;$i<$tc;++$i) {
       echo "<tr><td>";
-      if (!empty($sal[$i]["movie"]["imdb"])) echo "<a href='movie.php?mid=".$sal[$i]["movie"]["imdb"]."&engine=".$_GET['engine']."'>".$sal[$i]["movie"]["name"]."</a>";
+      if (!empty($sal[$i]["movie"]["imdb"])) echo "<a href='movie.php?mid=".$sal[$i]["movie"]["imdb"]."&engine=".$engine."'>".$sal[$i]["movie"]["name"]."</a>";
       else echo $sal[$i]["movie"]["name"];
       if (!empty($sal[$i]["movie"]["year"])) echo " (".$sal[$i]["movie"]["year"].")";
       echo "</td><td>".$sal[$i]["salary"]."</td></tr>";
@@ -171,7 +173,7 @@ if (isset ($_GET["mid"]) && preg_match('/^[0-9]+$/',$_GET["mid"])) {
       echo "<TR><TD><b>$flname:</b> </td><td>\n";
       echo "<table align='left' border='1' style='border-collapse:collapse;background-color:#ddd;'><tr><th style='background-color:#07f;'>Movie</th><th style='background-color:#07f;'>Character</th></tr>";
       foreach ($filmo as $film) {
-        echo "<tr><td><a href='movie.php?mid=".$film["mid"]."&engine=".$_GET['engine']."'>".$film["name"]."</a>";
+        echo "<tr><td><a href='movie.php?mid=".$film["mid"]."&engine=".$engine."'>".$film["name"]."</a>";
         if (!empty($film["year"])) echo " (".$film["year"].")";
         echo "</td><td>";
         if (empty($film["chname"])) echo "&nbsp;";
@@ -207,7 +209,7 @@ if (isset ($_GET["mid"]) && preg_match('/^[0-9]+$/',$_GET["mid"])) {
     echo "<table align='left' border='1' style='border-collapse:collapse;background-color:#ddd;'><tr><th style='background-color:#07f;'>Movie</th><th style='background-color:#07f;'>Year</th></tr>";
     $tc = count($pm);
     for ($i=0;$i<$tc;++$i) {
-      echo "<tr><td><a href='movie.php?mid=".$pm[$i]["imdb"]."&engine=".$_GET['engine']."'>".$pm[$i]["name"]."</a></td><td>";
+      echo "<tr><td><a href='movie.php?mid=".$pm[$i]["imdb"]."&engine=".$engine."'>".$pm[$i]["name"]."</a></td><td>";
       if (empty($pm[$i]["year"])) echo "&nbsp;</td></tr>";
       else echo $pm[$i]["year"]."</td></tr>";
     }
